// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sparkline > matches snapshot in dark mode 1`] = `
<div>
  <div
    class="MuiBox-root css-7oldt8"
    data-testid="sparkline"
    data-tone="primary"
  >
    <div
      class="css-1ej7lz3-MuiResponsiveChart-container"
    >
      <svg
        class="css-1evyvmv-MuiChartsSurface-root"
        height="24"
        viewBox="0 0 80 24"
        width="80"
      >
        <title />
        <desc />
        <defs />
        <g
          class="MuiChartsGrid-root css-g2sgfh-MuiChartsGrid-root"
        />
        <g
          clip-path="url(#_r_7_-clip-path)"
        >
          <g />
          <g>
            <clippath
              id="_r_8_-auto-generated-id-0-line-clip"
            >
              <rect
                height="24"
                width="0"
                x="0"
                y="0"
              />
            </clippath>
            <g
              clip-path="url(#_r_8_-auto-generated-id-0-line-clip)"
            >
              <path
                class="MuiLineElement-root MuiLineElement-series-auto-generated-id-0 css-bvawqf-MuiLineElement-root"
                cursor="unset"
                d="M0,21.6L20,14.4L40,19.2L60,4.8L80,12"
              />
            </g>
          </g>
        </g>
        <g
          data-drawing-container="true"
        >
          <g />
        </g>
        <clippath
          id="_r_7_-clip-path"
        >
          <rect
            height="24"
            width="80"
            x="0"
            y="0"
          />
        </clippath>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Sparkline > matches snapshot in light mode 1`] = `
<div>
  <div
    class="MuiBox-root css-7oldt8"
    data-testid="sparkline"
    data-tone="primary"
  >
    <div
      class="css-1ej7lz3-MuiResponsiveChart-container"
    >
      <svg
        class="css-1evyvmv-MuiChartsSurface-root"
        height="24"
        viewBox="0 0 80 24"
        width="80"
      >
        <title />
        <desc />
        <defs />
        <g
          class="MuiChartsGrid-root css-g2sgfh-MuiChartsGrid-root"
        />
        <g
          clip-path="url(#_r_a_-clip-path)"
        >
          <g />
          <g>
            <clippath
              id="_r_b_-auto-generated-id-0-line-clip"
            >
              <rect
                height="24"
                width="0"
                x="0"
                y="0"
              />
            </clippath>
            <g
              clip-path="url(#_r_b_-auto-generated-id-0-line-clip)"
            >
              <path
                class="MuiLineElement-root MuiLineElement-series-auto-generated-id-0 css-udobck-MuiLineElement-root"
                cursor="unset"
                d="M0,21.6L20,14.4L40,19.2L60,4.8L80,12"
              />
            </g>
          </g>
        </g>
        <g
          data-drawing-container="true"
        >
          <g />
        </g>
        <clippath
          id="_r_a_-clip-path"
        >
          <rect
            height="24"
            width="80"
            x="0"
            y="0"
          />
        </clippath>
      </svg>
    </div>
  </div>
</div>
`;
